<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_TCSCommand" Id="{455814c6-4fba-4cec-90aa-a71c1d2a50ea}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_TCSCommand :
(
	no_command := 0,
	gohome,
	park,
	track,
	goto,
	stop,
	pumping
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>